--- a/boutique.html
+++ b/boutique.html
@@ -75,11 +75,10 @@
         margin-top: 10px;
       }
       .logo {
-        position: relative;
-        left: auto;
-        transform: none;
-        margin-top: -70px;
-      }
+  position: static;
+  margin: 20px auto 10px;
+  display: block;
+}
     }
     .product-grid {
       display: grid;
