--- a/boutique.html
+++ b/boutique.html
@@ -47,6 +47,7 @@
       display: flex;
       gap: 20px;
       flex: 1;
+      flex-wrap: wrap;
     }
     .menu a {
       color: #fff;
@@ -54,16 +55,17 @@
       font-weight: normal;
       font-size: 13px;
     }
+    .logo-link {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      z-index: 10;
+    }
     .logo {
       width: 40px;
       height: 40px;
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
     }
-    .logo-link {
-      display: inline-block;
-    }
+
     @media (max-width: 600px) {
       header {
         flex-direction: column;
@@ -74,12 +76,11 @@
         justify-content: center;
         margin-top: 10px;
       }
-      .logo {
-  position: static;
-  margin: 20px auto 10px;
-  display: block;
-}
+      .logo-link {
+        margin: 20px 0 10px;
+      }
     }
+
     .product-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -130,6 +131,7 @@
       <div class="marquee-text">WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA?</div>
     </div>
   </div>
+
   <header>
     <div class="menu">
       <a href="index.html">Portfolio</a>
